assets/css/pages/contacts.css
.contacts-frame {
    display: flex;
}

/* .contacts-frame {
    display: none;
} */

.contacts-list {
    background-color: var(--white);
    box-shadow: var(--drop-shadow);
    overflow-y: scroll;
    scrollbar-width: thin;
    height: calc(100vh - 96px);
    background-color: var(--white);
    padding: 101px 12px 32px 24px;
}

.btn-add-new-contact {
    width: 352px;
    top: 20px;
    left: 24px;
}

.contacts-list-container {
    display: flex;
    flex-direction: column;
}

.contacts-list-container ul {
    list-style: none;
    padding: 0;
    margin: 0;
}

.contacts-list-container li {
    position: relative;
}

.contacts-list-index-tab {
    display: flex;
    flex-direction: column;
}

.contacts-list-index {
    padding: 17px 36px;
}

.contacts-list-vector {
    margin: 8px 0px;
    border-radius: 1px;
    border: solid 1px var(--input-border);
}

.contacts-list-btn {
    display: flex;
    justify-content: start;
    gap: 35px;
    width: 352px;
    border-radius: 10px;
    padding: 15px 24px;
}

.contacts-list-btn:hover {
    background: var(--boton-gradient);
}

.contacts-list-btn:active {
    background: var(--main);
}

.contacts-list-btn:active span:first-child {
    color: var(--white);
}

.contacts-list-btn-clicked {
    background: var(--main) !important;
}

.contacts-list-btn-clicked:hover {
    background: var(--main) !important;
}

.contacts-list-btn-clicked span:first-child {
    color: var(--white) !important;
}

.contacts-list-badge {
    width: 42px;
    height: 42px;
}

.contacts-list-initial {
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    color: var(--white);
}

.contacts-list-info {
    display: flex;
    flex-direction: column;
    align-items: start;
}

.contacts-list-info span:first-child {
    color: var(--black);
}

.contacts-list-info span:last-child {
    color: var(--main2nd);
}

.contacts-list .btn-wo-icn {
    gap: 16px;
}

/* floating contact */

.floating-contact {
    transform: translateX(200%);
    opacity: 0;
    display: flex;
    flex-direction: column;
    gap: 21px;
    margin-top: 42px;
}

.anim-float-contact {
    animation-duration: 600ms;
    animation-name: float-contact;
    animation-fill-mode: forwards;
    animation-timing-function: ease-in;
}

@keyframes float-contact {
    from {
        transform: translateX(200%);
        opacity: 0;
    }

    to {
        transform: translateX(0%);
        opacity: 1;
    }
}

.floating-contact-header {
    display: flex;
    gap: 54px;
    align-items: center;
}

.floating-contact-header-right {
    display: flex;
    flex-direction: column;
    gap: 8px;
}

.floating-contact-header-right span {
    display: flex;
    gap: 5px;
}

.floating-contact-header-panel {
    display: flex;
    gap: 16px;
}

.floating-contact-header-panel-icon {
    width: 24px;
    height: 24px;
    display: flex;
    align-items: center;
    justify-content: center;
}

.contact-icon-svg {
    fill: var(--main);
}

.floating-contact-header-panel-btn {
    display: flex;
    align-items: center;
    gap: 8px;
}

.floating-contact-header-panel-btn:hover div svg g path {
    fill: var(--main2nd);
}

.floating-contact-header-panel-btn:hover span {
    color: var(--main2nd);
    font-weight: 700;
}

.floating-contact-header-panel-icon-hover-container {
    width: 72px;
}

.floating-contact-badge {
    display: flex;
    width: 120px;
    height: 120px;
}

.floating-contact-badge-svg {
    width: 120px;
    height: 120px;
}

.floating-contact-initial {
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    color: var(--white);
}

.floating-contact-title {
    display: flex;
    gap: 59px;
}

.floating-contact-info {
    display: flex;
    flex-direction: column;
    gap: 22px;
}

.floating-contact-mail {
    display: flex;
    flex-direction: column;
    gap: 15px;
}

.floating-contact-mail span:first-child {
    color: var(--black-dark-view);
}

.floating-contact-mail span:last-child {
    color: var(--main2nd);
}

.floating-contact-phone {
    display: flex;
    flex-direction: column;
    gap: 15px;
}

.floating-contact-phone span:first-child {
    color: var(--black-dark-view);
}

.floating-contact-phone span:last-child {
    color: var(--black-dark-view);
}


@media (width <=1440px) {

    .contacts-frame .main-center {
        flex-direction: column;
        overflow-y: hidden;
    }

    .contacts-list {
        height: calc(100vh - 160px);
    }

    .floating-contact-badge {
        width: 80px;
        height: 80px;
    }

    .floating-contact-badge-svg {
        width: 80px;
        height: 80px;
    }

    .floating-contact-initial {
        font-size: 27px;
        font-weight: 400;
    }

    .floating-contact-header-right span:nth-child(1) {
        font-size: 36px;
        font-weight: 700;
    }

    .floating-contact-header-panel {
        display: none;
    }

    .floating-contact-header {
        gap: 10px;
    }
}

